config file error

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Setup
-title:               Methods in Spatial Research
+title:               'Methods in Spatial Research'
 tagline:             ''
 description:         'Methods in Spatial Research is a course offered at Columbia GSAPP by the <a target='blank' href="https://c4sr.columbia.edu">Center for Spatial Research</a>. Spring 2021.'
 url:                 https://darebrawley.github.io
