--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,17 @@
 # Setup
-title:               'Methods in Spatial Research'
+title:               Methods in Spatial Research
 tagline:             ''
-description:         'Methods in Spatial Research is a course offered at Columbia GSAPP by the <a target='blank' href="https://c4sr.columbia.edu">Center for Spatial Research</a>. Spring 2021.'
+description:         'A reserved <a href="https://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
 url:                 https://darebrawley.github.io
 baseurl:             '/course-template'
-paginate:            1
+paginate:            5
 permalink:           pretty
 
 # About/contact
 author:
-  name:              Dare Brawley
-  url:               https://darebrawley.net
-  email:             
+  name:              Mark Otto
+  url:               https://twitter.com/mdo
+  email:             markdotto@gmail.com
 
 # Gems
 plugins:
@@ -19,4 +19,4 @@ plugins:
 
 # Custom vars
 version:             1.1.0
-google_analytics_id: 
+google_analytics_id: #UA-XXXX-Y
